--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,38 +1,78 @@
-.header__container{
-    color: #2e2e38;
-}
-.title{
-    font-size: 2.5rem;
-    a{
-        text-decoration: none;
-        color: black;
-    }
-  
+body {
+  font-family: SF Pro Display;
 }
 
+//abc
+.header__container {
+  width: 100%;
+  height: 10vh;
+  // background-attachment: fixed;
+  // background-size: cover;
+  // background-blend-mode: saturation;
+  display: flex;
+  position: relative;
+  white-space: wrap;
+  padding: 20px 0px 0px 0px;
+  justify-content: space-around;
+  // box-shadow: 0px 8px 8px -6px rgba(0, 0, 0, 0.2);
 
-.nav__list{
-display: flex;
-list-style: none;
-margin: -0.875rem 0 2.77rem 0 ;
-border-bottom: 1px solid rgba(0, 0, 0, 0.39);
+  // align-content: center;
+  // box-shadow: 0 0 0px 2px grey;
+  //sticky bar--
+  // position: -webkit-sticky;
+  // position: sticky;
+  top: 0;
+}
 
+//nav
+.title {
+  font-size: 1.5rem;
+  float: left;
+  text-align: center;
+  font-family: SF Pro Display;
 
-.nav__item{
-    
-    color: #999999;
-    font-size:.875rem;
+  a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    transition: all 0.2s ease-in-out;
+    // background: #c6ffdd;
+    // background: -webkit-linear-gradient(to right, #f7797d, #fbd786, #c6ffdd);
+    // background: linear-gradient(to right, #f7797d, #fbd786, #c6ffdd);
+    // -webkit-background-clip: text;
+    // -webkit-text-fill-color: transparent;
+  }
+  a:hover {
+    color: rgb(95, 93, 93);
+    letter-spacing: 2px;
+  }
+}
+
+.nav__list {
+  display: flex;
+  list-style: none;
+
+  // margin: -0.875rem 0 2.77rem 0;
+  // border-bottom: 1px solid rgba(0, 0, 0, 0.39);
+
+  // float: right;
+
+  .nav__item {
+    text-transform: uppercase;
+    color: #000000;
+    font-size: 16px;
     margin-right: 1.3rem;
     text-decoration: none;
+    transition: all 0.3s;
 
-    &:hover{
-        color: #666666;
+    &:hover {
+      padding: 3px;
+      font-size: 1em;
+      color: rgb(94, 94, 94);
     }
 
-    &.active{
-        color:#000000
+    &.active {
+      color: rgb(163, 163, 163);
+      border-bottom: 2px solid #000000;
     }
-
-   
-}
+  }
 }
