--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,14 +1,11 @@
-.container{
-    margin: 0 auto;
-  
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    max-width: 800px;
-    min-height: 100vh;
-
+.container {
+  margin: 0;
+  // padding: rem;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.content{
-    flex-grow: 1;
+.content {
+  flex-grow: 1;
 }
