--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,32 +1,110 @@
-.posts{
-    list-style-type: none;
-    margin: 0;
+// .body {
+//   font-family: SF Pro Display;
+// }
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  //  ------------------------
+  //   background-image: #ff99af;
+  //   background-image: radial-gradient(
+  //       at 96% 5%,
+  //       hsla(246, 71%, 77%, 1) 0,
+  //       transparent 44%
+  //     ),
+  //     radial-gradient(at 50% 82%, hsla(28, 93%, 65%, 1) 0, transparent 56%),
+  //     radial-gradient(at 69% 86%, hsla(357, 62%, 64%, 1) 0, transparent 56%),
+  //     radial-gradient(at 69% 53%, hsla(59, 89%, 77%, 1) 0, transparent 44%),
+  //     radial-gradient(at 85% 81%, hsla(247, 83%, 61%, 1) 0, transparent 43%),
+  //     radial-gradient(at 89% 42%, hsla(142, 88%, 65%, 1) 0, transparent 48%),
+  //     radial-gradient(at 29% 16%, hsla(3, 68%, 76%, 1) 0, transparent 50%);
+
+  //   background-attachment: fixed;
+  //   background-size: cover;
+  //   background-blend-mode: multiply;
+  // -------------------------
+
+  h4 {
+    font-family: SF Pro Display;
+    font-size: 3em;
+    // border: 1px solid red;
+    margin: 20px;
+    text-align: center;
+  }
 }
 
-.post{
-    margin: 1rem 0;
+.posts {
+  list-style-type: none;
+  font-family: SF Pro Display;
+  margin: 0;
+  // display: flex;
+  // margin: 0 3em 0 3em;
+  // flex-wrap: wrap;
+  // max-width: 1400px;
+  // //   flex-direction: row;
+  // justify-content: space-around;
+  // //top right bottom left
+  // padding: 1em 2em 1em 2em;
+}
 
-    a{
-        background:#f2f2f6;
-        color:black;
-        text-decoration: none;
-        display: block;
-        padding: 1rem;
-        
-        &:hover{
-            background: rgb(214, 212, 212);
-        }
+.post {
+  margin: 1rem 0;
+  // margin: 1em 0.5em 0.5em 0.5em;
+  //   padding: 10px 10px 10px 10px;
 
+  // background-color: grey;
+
+  // width: 18em;
+  // height: 20em;
+
+  a {
+    background:#f2f2f6;
+    color:black;
+    text-decoration: none;
+    display: block;
+    padding: 1rem;
+    // background: #616161;
+    // max-width: 100%;
+    // min-width: 295px;
+    // height: auto;
+    // box-shadow: 0px 7px 10px rgba(black, 0.5);
+    // transition: 0.4s ease-out;
+    // background-image: linear-gradient(
+    //     to bottom,
+    //     rgba(255, 255, 255, 0.1),
+    //     rgba(0, 0, 0, 0.8)
+    //   ),
+    //   url("https://images.pexels.com/photos/6287933/pexels-photo-6287933.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+
+    // background-size: cover;
+    // color: rgb(255, 255, 255);
+    // text-decoration: none;
+    // display: block;
+    // border-radius: 15px;
+    // //top right bottom left
+    // padding: 18em 0em 0.5em 0.8em;
+
+    &:hover {
+      background: rgb(214, 212, 212);
+      // border: 2px solid grey;
+      // background-color: #ecf0f3;
+      // transform: translateY(20px);
     }
-    h2{
-        margin-bottom: 0;
-
+    &:before {
+      opacity: 1;
     }
-    p{
-        color:#777777;
-        font-size:.8rem;
-        font-style: italic;
+    .post {
+      opacity: 1;
+      // transform: translateY(0px);
     }
+  }
 
-    
+  h2 {
+    margin-bottom: 0;
+  }
+  p {
+    color: #272727;
+    font-size: 0.8rem;
+    font-style: italic;
+  }
 }
